# sql-lint-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DOCKER-README.md  Dockerfile  Dockerfile.optimized  README.md  docker-build.sh  docker-compose.yml  docker-helper.sh  docker-run-simple.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  test_extreme_performance.py  test_optimized_service.py  test_performance.py  test_quick_optimization.py  test_simple_performance.py  test_sql_statement.py  test_sqlfluff_performance.py  离线部署方案.md
app/: main.py
app/rules/: __init__.py  rule_ss01.py  rule_ss01_sqlglot.py  rule_ss02.py  rule_ss02_sqlglot.py  rule_ss03.py  rule_ss03_sqlglot.py  rule_ss04_sqlglot.py  sqlglot_base.py
app/rules/preprocessors/: __init__.py  base_preprocessor.py  comment_filter_preprocessor.py  date_variable_preprocessor.py  set_statement_filter_preprocessor.py
app/services/: event_handlers.py  lint_service.py  preprocessor_manager.py
app/utils/: position_recorder.py
tests/: README.md  demo_batch_date.py  run_all_tests.py  run_rule_test.py  test_actual_lint.py  test_api.py  test_base_preprocessor.py  test_basic.py  test_comment_filter_preprocessor.py  test_date_variable_default.py  test_extreme_performance.py  test_final_verification.py  test_full_original.py  test_full_service.py  test_get_statement_sql.py  test_hive_cast.py  test_hive_dialect.py  test_hive_syntax.py  test_hot_reload.py  test_lint_service.py  test_multiple_calls_issue.py  test_multiple_sql_statements.py  test_multiple_statements.py  test_no_deduplication.py  test_optimized_service.py  test_parse_error.py  test_parse_issue.py  test_performance.py  test_preprocessor.py  test_preprocessor_integration.py  test_preprocessor_manager.py  test_processed_sql.py  test_quick_optimization.py  test_rule_ss01.py  test_rule_ss02.py  test_rule_ss03.py  test_rule_ss04.py  test_rule_template.py  test_rules_functionality.py  test_rules_integration.py  (+17 more)
