[project]
name = "sql-lint-service"
version = "0.1.0"
description = ""
authors = [
    {name = "zyuerugou",email = "zyuerugou@163.com"}
]
requires-python = "^3.12"
dependencies = [
    "sqlfluff (>=4.1.0,<5.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[project.entry-points."sqlfluff"]
sql_lint_rules = "app.rules"

